--- a/P2_Booki_Nowfeel_SAFI/css/desktop/main_desktop.css
+++ b/P2_Booki_Nowfeel_SAFI/css/desktop/main_desktop.css
@@ -330,23 +330,23 @@
 
     .card-activites-all-item {
         display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        align-items: center;
+        justify-content: space-between;
         margin-bottom: 20px;
         width: 100%;
         height: 100%;
     }
+    /* card activites grand format (1 et 4) */
     .card-activites-seul {
         display: flex;
         flex-direction: column;
         box-shadow: -5px 5px 5px #f2f2f2;
         border-radius: 20px 20px 20px 20px;
+        height: 100%;
     }
     .card-activites-seul-image {
         width: 100%;
         max-width: 250px;
-        height: 300px;
+        height: 330px;
         display: flex;
     }
     .card-activites-seul img {
@@ -356,18 +356,23 @@
         border-radius: 20px 20px 0 0;
     }
 
+    /* gestion du bloc activites deux et trois */ 
+    .card-activites-deux-trois {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 230px;
+    }
     /* card activites deux */
     .card-activites-deux{
         display: flex;
         flex-direction: column;
         box-shadow: -5px 5px 5px #f2f2f2;
         border-radius: 20px 20px 20px 20px;
-        margin-bottom: 20px;
-        height: 200px;
     }
     .card-activites-deux-image {
         width: 100%;
-        height: 120px;
+        height: 170px;
         display: flex;
     }
     .card-activites-deux img {
@@ -383,11 +388,10 @@
         flex-direction: column;
         box-shadow: -5px 5px 5px #f2f2f2;
         border-radius: 20px 20px 20px 20px;
-        height: 100px;
     }
     .card-activites-trois-image {
         width: 100%;
-        height: 120px;
+        height: 80px;
         display: flex;
     }
     .card-activites-trois img {
@@ -396,6 +400,51 @@
         object-fit: cover;
         border-radius: 20px 20px 0 0;
     }
+    /* gestion du bloc activites 5 et 6 */
+    .card-activites-cinq-six {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 230px;
+    }
+
+    /* card activites 5 */
+    .card-activites-cinq {
+        display: flex;
+        flex-direction: column;
+        box-shadow: -5px 5px 5px #f2f2f2;
+        border-radius: 20px 20px 20px 20px;
+    }
+    .card-activites-cinq-image {
+        width: 100%;
+        height: 170px;
+        display: flex;
+    }
+    .card-activites-cinq img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 20px 20px 0 0;
+    }
+    /* card activites 6 */
+    .card-activites-six {
+        display: flex;
+        flex-direction: column;
+        box-shadow: -5px 5px 5px #f2f2f2;
+        border-radius: 20px 20px 20px 20px;
+    }
+    .card-activites-six-image {
+        width: 100%;
+        height: 170px;
+        display: flex;
+    }
+    .card-activites-six img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 20px 20px 0 0;
+    }
+    /* gestion du style général des cards activités */
     .card-activites-titre {
         margin-top: 40px;
         margin-bottom: 20px;
