--- a/P2_Booki_Nowfeel_SAFI/css/desktop/main_desktop.css
+++ b/P2_Booki_Nowfeel_SAFI/css/desktop/main_desktop.css
@@ -325,7 +325,7 @@
     }
     /* card activités à Marseille */
     .card-activites {
-        padding: 0 20px;
+        padding-right: 40px;
     }
 
     .card-activites-all-item {
@@ -417,7 +417,7 @@
     }
     .card-activites-cinq-image {
         width: 100%;
-        height: 170px;
+        height: 120px;
         display: flex;
     }
     .card-activites-cinq img {
@@ -435,7 +435,7 @@
     }
     .card-activites-six-image {
         width: 100%;
-        height: 170px;
+        height: 120px;
         display: flex;
     }
     .card-activites-six img {
@@ -449,23 +449,7 @@
         margin-top: 40px;
         margin-bottom: 20px;
     }
-    .card-activites-item {
-        display: flex;
-        flex-direction: column;
-        box-shadow: -5px 5px 5px #f2f2f2;
-        border-radius: 20px 20px 20px 20px;
-    }
-    .card-activites-image {
-        width: 100%;
-        height: 120px;
-        display: flex;
-    }
-    .card-activites-item img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-radius: 20px 20px 0 0;
-    }
+    
     .card-activites-item-titre {
         display: flex;
         padding-left: 20px;
