--- a/P2_Booki_Nowfeel_SAFI/css/desktop/header_desktop.css
+++ b/P2_Booki_Nowfeel_SAFI/css/desktop/header_desktop.css
@@ -23,13 +23,13 @@
         height: 45px;
     }
 
-    ul {
+    .navigation {
         display: flex;
         padding-inline-start: 0;
         margin: 0;
     }
 
-    li {
+    .header-li{
         display: flex;
         list-style: none;
         padding: 45px;
@@ -43,7 +43,7 @@
         text-decoration: none;
     }
 
-    li:hover {
+    .header-li:hover {
         border-top: 1px solid #0065FC;
         color: #0065FC; 
     }
