--- a/P2_Booki_Nowfeel_SAFI/css/desktop/main_desktop.css
+++ b/P2_Booki_Nowfeel_SAFI/css/desktop/main_desktop.css
@@ -334,7 +334,8 @@
     }
     /* card activités à Marseille */
     .card-activites {
-        padding-right: 40px;
+        padding-right: 60px;
+        padding-left: 20px;
     }
 
     .card-activites-all-item {
@@ -509,5 +510,17 @@
         margin-block-end: 0;
         margin-block-start: 0;
         padding-bottom: 10px;
+    }
+
+    .footer-item-ol {
+        padding-inline-start: 0;
+    }
+    .footer-li {
+        list-style: none;
+        margin-bottom: 8px;
+    }
+
+    .footer-li:hover {
+        color: #0065FC;
     }
 }
