--- a/P2_Booki_Nowfeel_SAFI/css/mobile/main_mobile.css
+++ b/P2_Booki_Nowfeel_SAFI/css/mobile/main_mobile.css
@@ -299,6 +299,101 @@
         margin-top: 40px;
         margin-bottom: 20px;
     }
+
+    /* style des card activites grand format (1 et 4) */
+    .card-activites-seul {
+        display: flex;
+        flex-direction: column;
+        box-shadow: -5px 5px 5px #f2f2f2;
+        border-radius: 20px 20px 20px 20px;
+        margin-bottom: 20px;
+    }
+    .card-activites-seul-image {
+        width: 100%;
+        height: 120px;
+        display: flex;
+    }
+    .card-activites-seul img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 20px 20px 0 0;
+    }
+    /* style card activites 2 */
+    .card-activites-deux {
+        display: flex;
+        flex-direction: column;
+        box-shadow: -5px 5px 5px #f2f2f2;
+        border-radius: 20px 20px 20px 20px;
+        margin-bottom: 20px;
+    }
+    .card-activites-deux-image {
+        width: 100%;
+        height: 120px;
+        display: flex;
+    }
+    .card-activites-deux img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 20px 20px 0 0;
+    }
+    /* style card activites 3 */
+    .card-activites-trois {
+        display: flex;
+        flex-direction: column;
+        box-shadow: -5px 5px 5px #f2f2f2;
+        border-radius: 20px 20px 20px 20px;
+        margin-bottom: 20px;
+    }
+    .card-activites-trois-image {
+        width: 100%;
+        height: 120px;
+        display: flex;
+    }
+    .card-activites-trois img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 20px 20px 0 0;
+    }
+    /* style card activites 5 */
+    .card-activites-cinq {
+        display: flex;
+        flex-direction: column;
+        box-shadow: -5px 5px 5px #f2f2f2;
+        border-radius: 20px 20px 20px 20px;
+        margin-bottom: 20px;
+    }
+    .card-activites-cinq-image {
+        width: 100%;
+        height: 120px;
+        display: flex;
+    }
+    .card-activites-cinq img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 20px 20px 0 0;
+    }
+    /* card activites 6 */ 
+    .card-activites-six {
+        display: flex;
+        flex-direction: column;
+        box-shadow: -5px 5px 5px #f2f2f2;
+        border-radius: 20px 20px 20px 20px;
+        margin-bottom: 20px;
+    }
+    .card-activites-six-image {
+        width: 100%;
+        height: 120px;
+        display: flex;
+    }
+    .card-activites-six img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 20px 20px 0 0;
     .card-activites-item {
         display: flex;
         flex-direction: column;
