--- a/P2_Booki_Nowfeel_SAFI/css/mobile/main_mobile.css
+++ b/P2_Booki_Nowfeel_SAFI/css/mobile/main_mobile.css
@@ -92,8 +92,12 @@
         border-style: solid;
     }
     .bouton-filtre:hover {
-        transform: skew(10deg, 10deg);
+        background-color: #0065FC;
     }
+    .titre-filtre:hover {
+        color: #F2F2F2;
+    }
+
     .icone-filtre {
         display: flex;
         margin-left: -10px;
