--- a/P2_Booki_Nowfeel_SAFI/css/desktop/main_desktop.css
+++ b/P2_Booki_Nowfeel_SAFI/css/desktop/main_desktop.css
@@ -183,7 +183,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-around;
-        max-width: 100%;
+        width: 100%;
     }
     .card-hebergements-items-4-a-6 {
         display: flex;
@@ -191,7 +191,8 @@
         justify-content: space-around;
     }
     .card-hebergement-item {
-        width: 250px;
+        width: 180px;
+        overflow: hidden;
         display: flex;
         background-color: white;
         flex-direction: column;
@@ -294,7 +295,7 @@
 
     .card-item-image {
         width: 40%;
-        height: 150px;
+        height: 160px;
         padding: 4px;
         display: flex;
     }
@@ -315,6 +316,7 @@
 
     .card-item-texte {
         display: flex;
+        flex-direction: column;
         flex-wrap: wrap;
     }
 
