--- a/P2_Booki_Nowfeel_SAFI/css/tablet/main_tablet.css
+++ b/P2_Booki_Nowfeel_SAFI/css/tablet/main_tablet.css
@@ -4,7 +4,7 @@
     -webkit-box-sizing: border-box;
 }
 /* pour tablette */
-@media all and (min-width: 768px) and (max-width: 992px) {
+@media all and (min-width: 768px) and (max-width: 991px) {
     /* balise globale */ 
     .barre-plus-filtre {
         padding-left: 32px;
@@ -104,4 +104,324 @@
     .titre-filtre {
         padding: 0 15px;
     }
+/* style des cards */
+.card-hebergement-populaire {
+    display: flex;
+    flex-direction: column;
 }
+/* style du card "les plus populaires" */
+.card-populaire {
+    background-color: #F2F2F2;
+    padding-left: 10px;
+    padding-right: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.card-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    margin-bottom: 10px;
+}
+
+.card-header-icone {
+    font-size: 20px;
+}
+
+.card-item {
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    width: 100%;
+    box-shadow: -5px 5px 5px #e3e3e3;
+}
+
+.card-item-image {
+    width: 40%;
+    height: 150px;
+    padding: 4px;
+    display: flex;
+}
+
+.card-item-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px 0 0 10px;
+}
+
+.card-item-details {
+    width: 50%;
+    padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.card-item-texte {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.card-item-h2 {
+    margin-block-end: 10px;
+}
+
+.card-item-subtitle {
+    font-size: 13px;
+}
+
+.card-item-p {
+    margin-block-start: 0;
+    margin-block-end: 45px;
+}
+.card-item-icone {
+    color: #0065FC;
+    font-size: 13px;
+    margin-bottom: 12.450px;
+}
+
+.icone-etoile-gris {
+    color: #f2f2f2;
+}
+
+/* partie hebergements */
+.card-hebergements {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
+}
+
+.card-hebergement-item {
+    display: flex;
+    background-color: white;
+    flex-direction: column;
+    border-radius: 10px;
+    margin-bottom: 20px; 
+    width: 100%;
+    box-shadow: -5px 5px 5px #f2f2f2;
+}
+.card-hebergement-item-image {
+    width: 100%;
+    height: 120px;
+    padding: 4px;
+    display: flex;
+}
+
+.card-hebergement-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px 10px 0 0;
+}
+
+.card-hebergement-item-details {
+    padding-left: 13px;
+}
+
+.card-hebergement-item-h2 {
+    margin-block-end: 0;
+    margin-block-start: 0;
+}
+
+.card-hebergement-item-titre {
+    padding-top: 7px;
+}
+.card-hebergement-item-subtitle {
+    font-size: 13px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+}
+.card-hebergement-item-p {
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+
+.card-hebergement-item-icone {
+    font-size: 13px;
+    color: #0065FC;
+    padding-bottom: 7px;
+}
+.afficher-plus {
+    padding-top: 10px;
+    padding-left: 10px;
+}
+.afficher-plus-h2 {
+    font-size: 17px;
+}
+/* card activités à Marseille */
+.card-activites {
+    padding: 0 20px;
+}
+
+.card-activites-all-item {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+.card-activites-titre {
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+
+/* style des card activites grand format (1 et 4) */
+.card-activites-seul {
+    display: flex;
+    flex-direction: column;
+    box-shadow: -5px 5px 5px #f2f2f2;
+    border-radius: 20px 20px 20px 20px;
+    margin-bottom: 20px;
+}
+.card-activites-seul-image {
+    width: 100%;
+    height: 120px;
+    display: flex;
+}
+.card-activites-seul img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px 20px 0 0;
+}
+/* style card activites 2 */
+.card-activites-deux {
+    display: flex;
+    flex-direction: column;
+    box-shadow: -5px 5px 5px #f2f2f2;
+    border-radius: 20px 20px 20px 20px;
+    margin-bottom: 20px;
+}
+.card-activites-deux-image {
+    width: 100%;
+    height: 120px;
+    display: flex;
+}
+.card-activites-deux img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px 20px 0 0;
+}
+/* style card activites 3 */
+.card-activites-trois {
+    display: flex;
+    flex-direction: column;
+    box-shadow: -5px 5px 5px #f2f2f2;
+    border-radius: 20px 20px 20px 20px;
+    margin-bottom: 20px;
+}
+.card-activites-trois-image {
+    width: 100%;
+    height: 120px;
+    display: flex;
+}
+.card-activites-trois img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px 20px 0 0;
+}
+/* style card activites 5 */
+.card-activites-cinq {
+    display: flex;
+    flex-direction: column;
+    box-shadow: -5px 5px 5px #f2f2f2;
+    border-radius: 20px 20px 20px 20px;
+    margin-bottom: 20px;
+}
+.card-activites-cinq-image {
+    width: 100%;
+    height: 120px;
+    display: flex;
+}
+.card-activites-cinq img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px 20px 0 0;
+}
+/* card activites 6 */ 
+.card-activites-six {
+    display: flex;
+    flex-direction: column;
+    box-shadow: -5px 5px 5px #f2f2f2;
+    border-radius: 20px 20px 20px 20px;
+    margin-bottom: 20px;
+}
+.card-activites-six-image {
+    width: 100%;
+    height: 120px;
+    display: flex;
+}
+.card-activites-six img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px 20px 0 0;
+}
+.card-activites-item {
+    display: flex;
+    flex-direction: column;
+    box-shadow: -5px 5px 5px #f2f2f2;
+    border-radius: 20px 20px 20px 20px;
+    margin-bottom: 20px;
+}
+.card-activites-image {
+    width: 100%;
+    height: 120px;
+    display: flex;
+}
+.card-activites-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px 20px 0 0;
+}
+.card-activites-item-titre {
+    display: flex;
+    padding-left: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+/* partie footer */
+footer {
+    background-color: #F2F2F2;
+    padding-left: 20px;
+    padding-top: 30px;
+    padding-bottom: 50px;
+}
+
+.footer-item-h2 {
+    font-size: 18px;
+    margin-block-end: 0;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.footer-item-lien {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 40px;
+}
+.footer-item-p {
+    font-size: 15px;
+    margin-block-end: 0;
+    margin-block-start: 0;
+    padding-bottom: 10px;
+}
+.footer-item-ol {
+    padding-inline-start: 0;
+}
+.footer-li {
+    list-style: none;
+    margin-bottom: 10px;
+}
+.footer-li:hover {
+    color: #0065FC;
+}
+}
+
