--- a/P2_Booki_Nowfeel_SAFI/css/media-queries.css
+++ b/P2_Booki_Nowfeel_SAFI/css/media-queries.css
@@ -1,5 +1,6 @@
 /* media queries partie desktop */ 
 @media all and (min-width: 993px) {
+
     /* limitation de la largeur du site */
     body {
         max-width: 1440px;
@@ -31,9 +32,14 @@
         list-style: none;
         padding: 45px;
     }
-    a:visited {
+    a {
         color: black;
     }
+
+    a:hover {
+        color: #0065FC; 
+    }
+
     .header-li:hover {
         border-top: 1px solid #0065FC;
         color: #0065FC; 
@@ -128,7 +134,7 @@
         justify-content: space-around;
     }
     .card-hebergement-item {
-        width: 180px;
+        width: 185px;
     }
     .afficher-plus {
         padding-top: 10px;
@@ -286,6 +292,10 @@
         display: flex;
         flex-direction: column;
     }
+
+    .card-populaire {
+        padding-right: 10px;
+    }
     /* partie populaires */ 
     .card-item-image {
         height: 150px;
@@ -326,12 +336,26 @@
 
     /* style card activites 2 */
     .card-activites-deux {
+        display: flex;
+        flex-direction: column;
+        box-shadow: -5px 5px 5px #f2f2f2;
+        border-radius: 20px 20px 20px 20px;
         margin-bottom: 20px;
     }
 
+    .card-activites-deux-image {
+        width: 100%;
+        height: 120px;
+        display: flex;
+    }
     /* style card activites 3 */
     .card-activites-trois {
         margin-bottom: 20px;
+    }
+    .card-activites-trois-image {
+        width: 100%;
+        height: 120px;
+        display: flex;
     }
     /* style card activites 5 */
     .card-activites-cinq {
